--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,9 +7,9 @@
     <body>
         <div class="main">
             {{>header}}
-            <p>This site is created by Anurag Kotwal. It uses data from mapbox.com and weatherstack.com!</p>
+            <p>This site is created by Anurag Kotwal. API used for fetching weather :- mapbox.com and weatherstack.com </p>
             <img class="portrait" src="./img/me.jpg">
-            <a href="https://github.com/Final-Null?tab=repositories">Follow me on Github</a>
+            <a href="https://github.com/anuragkotwal">Follow me on Github</a>
         </div>
         {{>footer}}
     </body>
